--- a/test/fixtures/travelers.yml
+++ b/test/fixtures/travelers.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  username: MyString
+  password_digest: MyString
+  first_name: MyString
+  last_name: MyString
   age: 1
-  gender: MyString
 
 two:
-  name: MyString
+  username: MyString
+  password_digest: MyString
+  first_name: MyString
+  last_name: MyString
   age: 1
-  gender: MyString
